필요없는 부분 제거(코드 다듬기), 조금 나름 조금 꾸며봄

--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ body {
 .task{
     display: flex;
     justify-content: space-between;
-    padding: 1px;
+    padding: 2px;
+    border: 0.5px solid;
 }
 
 .task-done{
@@ -51,4 +52,9 @@ body {
 
 .task-tabs div{
     cursor: pointer;
+}
+
+button {
+    background-color: transparent;
+    border: none;
 }
