--- a/ cloneCoding/style.css
+++ b/ cloneCoding/style.css
@@ -1,58 +1,59 @@
-body{
+body {
     margin: 0;
-    background-image: url("img/1.gif");
-    /* 사진 한개로 만들기 */
+    background-image: url("img/background.jpg");
     background-repeat: no-repeat;
-    /* 화면 채우기 */
     background-size: cover;
-    color: white;
 }
 
 .container {
+    background-color: white;
     min-height: 100vh;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-
+.task-area{
+    border: 1px solid lightgray;
+}
 
 .task-tabs {
-    /* 세로 -> 가로 */
     display: flex;
+    border-bottom: 1px solid lightgray;
     position: relative;
-    border-bottom: 1px solid white;
 }
 
 .task-tabs div {
     padding: 1em;
 }
 
+#under-line{
+    height: 4px;
+    background-color: pink;
+    position: absolute;
+    width: 80px;
+    left: 0px;
+    top: 52px;
+    padding: 0px;
+}
+
 .task{
     display: flex;
     justify-content: space-between;
     padding: 2px;
+    border: 0.5px solid;
 }
 
 .task-done{
     text-decoration: line-through;
-}
-
-#under-line{
-    /* 위치 겹치기 */
-    position: absolute;
-    background-color: lightyellow;
-    height: 2px;
-    width: 75px;
-    left: 0px;
-    top: 48px;
-    padding: 0px;
+    background-color: lightgray;
+    flex-grow: 1;
+    padding-right: 1em;
+    margin-right: 1px;
 }
 
 .task-tabs div{
     cursor: pointer;
 }
 
-
-/* 기본 버튼 스타일 없애기 */
 button {
     background-color: transparent;
     border: none;
