--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ body{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
+.container a {
+    margin-left: auto;
+    margin-right: 5em;
+    float: right;
+    color: yellow;
+}
 
 
 .task-tabs {
